# routes/product.js
@@ -2,14 +2,15 @@ const express = require('express');
 const router = express.Router();
 
 const productController = require('../controllers/product');
+const validation = require('../middleware/validate');
 
 router.get('/', productController.getAll);
 
 router.get('/:Id', productController.getSingle);
 
-router.post('/', productController.createProduct);
+router.post('/', validation.saveProduct, productController.createProduct);
 
-router.put('/:Id', productController.updateProduct);
+router.put('/:Id', validation.saveProduct, productController.updateProduct);
 
 router.delete('/:Id', productController.deleteProduct);
 
