# routes/user.js
@@ -2,14 +2,15 @@ const express = require('express');
 const router = express.Router();
 
 const userController = require('../controllers/user');
+const validation = require('../middleware/validate');
 
 router.get('/', userController.getAll);
 
 router.get('/:username', userController.getSingle);
 
-router.post('/', userController.createUser);
+router.post('/', validation.saveUser, userController.createUser);
 
-router.put('/:username', userController.updateUser);
+router.put('/:username', validation.saveUser, userController.updateUser);
 
 router.delete('/:username', userController.deleteUser);
 
